--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,12 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
