--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
+    "mongod": "^2.0.0",
     "mongodb": "^2.2.33",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
